Additional-Practices-Questions/solution-15/fix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: prefix   # <--- THE ERROR (Lowercase)
        backend:
          service:
            name: web-svc
            port:
              number: 8080
